Bug 967220 - Australis - include the tabstoolbar in things animating (with a margin), r=mconley
UltraBlame original commit: 6cdfa68aeeb47a9a434887de367beb66673a460b

--- a/browser/themes/osx/browser.css
+++ b/browser/themes/osx/browser.css
@@ -1,3 +1,61 @@
+/
+*
+This
+Source
+Code
+Form
+is
+subject
+to
+the
+terms
+of
+the
+Mozilla
+Public
+*
+License
+v
+.
+2
+.
+0
+.
+If
+a
+copy
+of
+the
+MPL
+was
+not
+distributed
+with
+this
+*
+file
+You
+can
+obtain
+one
+at
+http
+:
+/
+/
+mozilla
+.
+org
+/
+MPL
+/
+2
+.
+0
+/
+.
+*
+/
 import
 url
 (
@@ -199,6 +257,14 @@ group
 :
 101
 ;
+/
+*
+tabs
+toolbar
+is
+100
+*
+/
 background
 -
 image
@@ -289,6 +355,14 @@ index
 :
 2
 ;
+/
+*
+navbar
+is
+at
+1
+*
+/
 }
 #
 navigator
@@ -347,6 +421,51 @@ display
 none
 ;
 }
+/
+*
+NB
+:
+these
+would
+be
+-
+moz
+-
+margin
+-
+start
+/
+end
+if
+it
+wasn
+'
+t
+for
+the
+fact
+that
+OS
+X
+*
+doesn
+'
+t
+reverse
+the
+order
+of
+the
+items
+in
+the
+titlebar
+in
+RTL
+mode
+.
+*
+/
 .
 titlebar
 -
@@ -529,6 +648,40 @@ rgba
 )
 ;
 }
+/
+*
+Because
+of
+-
+moz
+-
+box
+-
+align
+:
+center
+above
+separators
+will
+be
+invisible
+unless
+we
+set
+their
+min
+-
+height
+.
+See
+bug
+583510
+for
+more
+information
+.
+*
+/
 toolbarseparator
 {
 min
@@ -677,6 +830,55 @@ box
 !
 important
 ;
+/
+*
+Move
+the
+noise
+texture
+out
+of
+the
+top
+1px
+strip
+because
+that
+overlaps
+with
+the
+tabbar
+and
+we
+don
+'
+t
+want
+to
+repaint
+it
+when
+animating
+tabs
+.
+The
+noise
+image
+is
+at
+least
+100px
+high
+so
+repeating
+it
+only
+horizontally
+is
+enough
+.
+*
+/
 background
 -
 repeat
@@ -723,6 +925,19 @@ top
 -
 1px
 ;
+/
+*
+Position
+the
+toolbar
+above
+the
+bottom
+of
+background
+tabs
+*
+/
 position
 :
 relative
@@ -883,6 +1098,22 @@ chrome
 inactive
 ;
 }
+/
+*
+-
+-
+-
+-
+-
+BOOKMARK
+TOOLBAR
+-
+-
+-
+-
+-
+*
+/
 #
 personal
 -
@@ -894,6 +1125,18 @@ height
 :
 17px
 ;
+/
+*
+16px
+button
+height
++
+1px
+margin
+-
+bottom
+*
+/
 }
 toolbarbutton
 .
@@ -1032,6 +1275,22 @@ width
 ;
 }
 }
+/
+*
+-
+-
+-
+-
+-
+BOOKMARK
+BUTTONS
+-
+-
+-
+-
+-
+*
+/
 toolbarbutton
 .
 bookmark
@@ -1305,6 +1564,18 @@ box
 !
 important
 ;
+/
+*
+Force
+the
+display
+of
+the
+label
+for
+bookmarks
+*
+/
 margin
 :
 0
@@ -2407,6 +2678,15 @@ png
 ;
 }
 }
+/
+*
+Workaround
+for
+native
+menubar
+inheritance
+*
+/
 .
 openintabs
 -
@@ -2831,6 +3111,23 @@ width
 ;
 }
 }
+/
+*
+-
+-
+-
+-
+-
+BOOKMARK
+STAR
+ANIMATION
+-
+-
+-
+-
+-
+*
+/
 keyframes
 animation
 -
@@ -3358,6 +3655,22 @@ ease
 out
 ;
 }
+/
+*
+-
+-
+-
+-
+-
+BOOKMARK
+MENUS
+-
+-
+-
+-
+-
+*
+/
 .
 bookmark
 -
@@ -3522,6 +3835,23 @@ png
 ;
 }
 }
+/
+*
+-
+-
+-
+-
+-
+PRIMARY
+TOOLBAR
+BUTTONS
+-
+-
+-
+-
+-
+*
+/
 toolbar
 .
 toolbarbutton
@@ -3651,6 +3981,33 @@ margin
 4px
 ;
 }
+/
+*
+*
+*
+Draw
+seperators
+before
+toolbar
+button
+dropmarkers
+as
+well
+as
+between
+*
+consecutive
+toolbarbutton
+-
+1
+'
+s
+within
+a
+toolbaritem
+.
+*
+/
 #
 nav
 -
@@ -4978,6 +5335,27 @@ rect
 )
 ;
 }
+/
+*
+*
+*
+OSX
+has
+a
+unique
+set
+of
+icons
+when
+fullscreen
+is
+in
+the
+checked
+state
+.
+*
+/
 #
 fullscreen
 -
@@ -5060,6 +5438,31 @@ resolution
 2dppx
 )
 {
+/
+*
+Whitelist
+built
+-
+in
+buttons
+instead
+of
+.
+toolbarbutton
+-
+1
+to
+avoid
+potentially
+breaking
+add
+-
+on
+toolbar
+buttons
+.
+*
+/
 :
 -
 moz
@@ -8065,6 +8468,15 @@ width
 18px
 ;
 }
+/
+*
+Menu
+panel
+and
+palette
+styles
+*
+/
 :
 -
 moz
@@ -9256,6 +9668,16 @@ rect
 )
 ;
 }
+/
+*
+Footer
+and
+wide
+panel
+control
+icons
+*
+/
 #
 edit
 -
@@ -9326,6 +9748,41 @@ png
 )
 ;
 }
+/
+*
+Wide
+items
+like
+the
+Cut
+/
+Copy
+/
+Paste
+and
+Zoom
+controls
+are
+special
+in
+that
+their
+icons
+are
+16x16
+when
+in
+the
+panel
+but
+18x18
+when
+in
+a
+toolbar
+.
+*
+/
 #
 edit
 -
@@ -9705,6 +10162,15 @@ width
 28px
 ;
 }
+/
+*
+Help
+16px
+icons
+fit
+:
+*
+/
 .
 toolbarbutton
 -
@@ -9766,6 +10232,15 @@ margin
 2px
 ;
 }
+/
+*
+Help
+SDK
+icons
+fit
+:
+*
+/
 toolbarbutton
 [
 sdk
@@ -10796,6 +11271,16 @@ top
 1px
 ;
 }
+/
+*
+Common
+back
+and
+forward
+button
+styles
+*
+/
 #
 back
 -
@@ -11088,6 +11573,13 @@ scaleX
 )
 ;
 }
+/
+*
+Back
+button
+styles
+*
+/
 #
 back
 -
@@ -11333,6 +11825,13 @@ position
 0
 ;
 }
+/
+*
+Forward
+button
+styles
+*
+/
 #
 forward
 -
@@ -11396,6 +11895,18 @@ toolbarbutton
 -
 icon
 {
+/
+*
+shift
+the
+icon
+away
+from
+the
+back
+button
+*
+/
 margin
 -
 left
@@ -12275,6 +12786,12 @@ png
 important
 ;
 }
+/
+*
+home
+button
+*
+/
 #
 home
 -
@@ -12393,6 +12910,13 @@ end
 3px
 ;
 }
+/
+*
+tabview
+menu
+item
+*
+/
 #
 menu_tabview
 {
@@ -12706,6 +13230,12 @@ left
 0
 ;
 }
+/
+*
+zoom
+controls
+*
+/
 #
 zoom
 -
@@ -12938,6 +13468,12 @@ margin
 2px
 ;
 }
+/
+*
+sync
+button
+*
+/
 #
 sync
 -
@@ -12991,6 +13527,23 @@ rect
 )
 ;
 }
+/
+*
+-
+-
+-
+-
+-
+FULLSCREEN
+WINDOW
+CONTROLS
+-
+-
+-
+-
+-
+*
+/
 #
 minimize
 -
@@ -13019,6 +13572,25 @@ display
 none
 ;
 }
+/
+*
+:
+:
+:
+:
+:
+nav
+-
+bar
+-
+inner
+:
+:
+:
+:
+:
+*
+/
 #
 urlbar
 .
@@ -13611,6 +14183,27 @@ wrapper
 #
 urlbar
 {
+/
+*
+delay
+the
+hiding
+of
+the
+forward
+button
+when
+hovered
+to
+avoid
+accidental
+clicks
+on
+the
+url
+bar
+*
+/
 transition
 -
 delay
@@ -13652,6 +14245,29 @@ wrapper
 #
 urlbar
 {
+/
+*
+when
+switching
+tabs
+or
+when
+not
+hovered
+anymore
+trigger
+a
+new
+transition
+*
+to
+hide
+the
+forward
+button
+immediately
+*
+/
 margin
 -
 left
@@ -13698,6 +14314,31 @@ dir
 rtl
 )
 {
+/
+*
+let
+osx
+-
+urlbar
+-
+back
+-
+button
+-
+clip
+-
+path
+clip
+the
+urlbar
+'
+s
+right
+side
+for
+RTL
+*
+/
 transform
 :
 scaleX
@@ -14029,6 +14670,27 @@ identity
 -
 box
 {
+/
+*
+delay
+the
+hiding
+of
+the
+forward
+button
+when
+hovered
+to
+avoid
+accidental
+clicks
+on
+the
+url
+bar
+*
+/
 transition
 -
 delay
@@ -14842,6 +15504,28 @@ rect
 )
 ;
 }
+/
+*
+The
+chromeUI
+identity
+-
+icon
+set
+includes
+three
+states
+but
+OS
+X
+only
+uses
+two
+of
+them
+.
+*
+/
 #
 identity
 -
@@ -15278,6 +15962,28 @@ rect
 )
 ;
 }
+/
+*
+The
+chromeUI
+identity
+-
+icon
+set
+includes
+three
+states
+but
+OS
+X
+only
+uses
+two
+of
+them
+.
+*
+/
 #
 identity
 -
@@ -15413,6 +16119,21 @@ top
 2px
 ;
 }
+/
+*
+-
+-
+-
+-
+-
+AUTOCOMPLETE
+-
+-
+-
+-
+-
+*
+/
 #
 treecolAutoCompleteImage
 {
@@ -16328,6 +17049,30 @@ solid
 GrayText
 ;
 }
+/
+*
+-
+-
+-
+-
+-
+COMBINED
+GO
+/
+RELOAD
+/
+STOP
+BUTTON
+IN
+LOCATION
+BAR
+-
+-
+-
+-
+-
+*
+/
 #
 urlbar
 >
@@ -17022,6 +17767,13 @@ width
 ;
 }
 }
+/
+*
+POPUP
+BLOCKER
+BUTTON
+*
+/
 #
 page
 -
@@ -17217,6 +17969,13 @@ rect
 ;
 }
 }
+/
+*
+social
+share
+panel
+*
+/
 .
 social
 -
@@ -17267,6 +18026,19 @@ height
 :
 150px
 ;
+/
+*
+we
+resize
+our
+panels
+dynamically
+make
+it
+look
+nice
+*
+/
 transition
 :
 height
@@ -17546,6 +18318,13 @@ height
 16px
 ;
 }
+/
+*
+social
+recommending
+panel
+*
+/
 #
 social
 -
@@ -17569,6 +18348,14 @@ rect
 )
 ;
 }
+/
+*
+bookmarks
+menu
+-
+button
+*
+/
 #
 bookmarks
 -
@@ -17825,6 +18612,12 @@ width
 ;
 }
 }
+/
+*
+BOOKMARKING
+PANEL
+*
+/
 #
 editBookmarkPanelStarIcon
 {
@@ -17941,6 +18734,18 @@ bottom
 0
 ;
 }
+/
+*
+*
+*
+*
+Input
+elements
+*
+*
+*
+*
+/
 #
 editBMPanel_rows
 >
@@ -18091,6 +18896,19 @@ shadow
 focusRingShadow
 ;
 }
+/
+*
+*
+*
+*
+HUD
+style
+buttons
+*
+*
+*
+*
+/
 .
 editBookmarkPanelHeaderButton
 .
@@ -18191,6 +19009,52 @@ start
 8px
 ;
 }
+/
+*
+The
+following
+elements
+come
+from
+editBookmarkOverlay
+.
+xul
+.
+Styling
+that
+'
+s
+specific
+to
+the
+editBookmarkPanel
+should
+be
+in
+browser
+.
+css
+.
+Styling
+that
+should
+be
+shared
+by
+all
+editBookmarkOverlay
+.
+xul
+consumers
+should
+be
+in
+editBookmarkOverlay
+.
+css
+.
+*
+/
 #
 editBMPanel_newFolderBox
 {
@@ -18638,6 +19502,21 @@ png
 )
 ;
 }
+/
+*
+*
+*
+*
+folder
+tree
+and
+tag
+selector
+*
+*
+*
+*
+/
 #
 editBMPanel_folderTree
 #
@@ -18784,6 +19663,19 @@ radius
 :
 0
 ;
+/
+*
+Implements
+editBookmarkPanel
+resizing
+on
+folderTree
+un
+-
+collapse
+.
+*
+/
 margin
 :
 0
@@ -18801,6 +19693,17 @@ position
 relative
 ;
 }
+/
+*
+*
+*
+*
+expanders
+*
+*
+*
+*
+/
 #
 editBookmarkPanel
 .
@@ -19429,6 +20332,13 @@ width
 ;
 }
 }
+/
+*
+History
+Swipe
+Animation
+*
+/
 #
 historySwipeAnimationCurrentPage
 #
@@ -19479,6 +20389,22 @@ png
 B3B9C1
 ;
 }
+/
+*
+-
+-
+-
+-
+-
+SIDEBAR
+ELEMENTS
+-
+-
+-
+-
+-
+*
+/
 #
 sidebar
 sidebarheader
@@ -19751,6 +20677,21 @@ display
 none
 ;
 }
+/
+*
+-
+-
+-
+-
+-
+CONTENT
+-
+-
+-
+-
+-
+*
+/
 .
 browserContainer
 >
@@ -19894,6 +20835,21 @@ image
 none
 ;
 }
+/
+*
+:
+:
+:
+:
+:
+tabbrowser
+:
+:
+:
+:
+:
+*
+/
 .
 tabbrowser
 -
@@ -19949,6 +20905,21 @@ resolution
 2dppx
 )
 {
+/
+*
+image
+preloading
+hack
+from
+shared
+/
+tabs
+.
+inc
+.
+css
+*
+/
 #
 TabsToolbar
 :
@@ -20587,6 +21558,13 @@ png
 )
 ;
 }
+/
+*
+Background
+tab
+separators
+*
+/
 #
 tabbrowser
 -
@@ -20850,6 +21828,14 @@ moz
 lwtheme
 )
 {
+/
+*
+overriding
+tabbox
+.
+css
+*
+/
 color
 :
 inherit
@@ -20865,6 +21851,14 @@ selected
 true
 ]
 {
+/
+*
+overriding
+tabbox
+.
+css
+*
+/
 text
 -
 shadow
@@ -21094,6 +22088,69 @@ lwtheme
 :
 before
 {
+/
+*
+We
+want
+the
+titlebar
+to
+be
+unified
+but
+we
+still
+want
+to
+be
+able
+*
+to
+give
+#
+TabsToolbar
+a
+background
+.
+So
+we
+can
+'
+t
+set
+-
+moz
+-
+appearance
+:
+*
+toolbar
+on
+#
+TabsToolbar
+itself
+.
+Instead
+we
+set
+it
+on
+a
+box
+of
+the
+*
+right
+size
+which
+is
+put
+underneath
+#
+TabsToolbar
+.
+*
+/
 content
 :
 '
@@ -21179,6 +22236,28 @@ shadow
 loweredShadow
 ;
 }
+/
+*
+*
+Draw
+the
+bottom
+border
+of
+the
+tabstrip
+when
+core
+doesn
+'
+t
+do
+it
+for
+us
+:
+*
+/
 #
 main
 -
@@ -21244,6 +22323,73 @@ content
 '
 '
 ;
+/
+*
+Because
+we
+use
+placeholders
+for
+window
+controls
+etc
+.
+in
+the
+tabstrip
+*
+and
+position
+those
+with
+ordinal
+attributes
+and
+because
+our
+layout
+code
+*
+expects
+:
+before
+/
+:
+after
+nodes
+to
+come
+first
+/
+last
+in
+the
+frame
+list
+*
+we
+have
+to
+reorder
+this
+element
+to
+come
+last
+hence
+the
+*
+ordinal
+group
+value
+(
+see
+bug
+853415
+)
+.
+*
+/
 -
 moz
 -
@@ -21329,6 +22475,16 @@ padding
 4px
 ;
 }
+/
+*
+*
+*
+Tab
+Drag
+and
+Drop
+*
+/
 .
 tab
 -
@@ -21419,6 +22575,17 @@ width
 ;
 }
 }
+/
+*
+*
+*
+In
+-
+tab
+close
+button
+*
+/
 .
 tab
 -
@@ -22801,6 +23968,20 @@ png
 fill
 ;
 }
+/
+*
+*
+*
+Tabstrip
+&
+add
+-
+on
+bar
+toolbar
+buttons
+*
+/
 #
 TabsToolbar
 .
@@ -22841,6 +24022,19 @@ appearance
 :
 none
 ;
+/
+*
+!
+important
+flags
+needed
+because
+of
+bug
+561154
+:
+*
+/
 margin
 :
 0
@@ -24188,6 +25382,13 @@ end
 2px
 ;
 }
+/
+*
+All
+Tabs
+Menupopup
+*
+/
 .
 alltabs
 -
@@ -24347,6 +25548,23 @@ item
 tabIsVisible
 ]
 {
+/
+*
+box
+-
+shadow
+instead
+of
+background
+-
+color
+to
+work
+around
+native
+styling
+*
+/
 box
 -
 shadow
@@ -24358,6 +25576,13 @@ inset
 ThreeDShadow
 ;
 }
+/
+*
+Tabstrip
+close
+button
+*
+/
 .
 tabs
 -
@@ -24402,6 +25627,12 @@ width
 ;
 }
 }
+/
+*
+Bookmarks
+toolbar
+*
+/
 #
 PlacesToolbarDropIndicator
 {
@@ -24429,6 +25660,15 @@ png
 )
 ;
 }
+/
+*
+Bookmark
+drag
+and
+drop
+styles
+*
+/
 .
 bookmark
 -
@@ -24456,6 +25696,15 @@ HighlightText
 important
 ;
 }
+/
+*
+rules
+for
+menupopup
+drop
+indicators
+*
+/
 .
 menupopup
 -
@@ -24469,6 +25718,21 @@ position
 :
 relative
 ;
+/
+*
+these
+two
+margins
+must
+together
+compensate
+the
+indicator
+'
+s
+height
+*
+/
 margin
 -
 top
@@ -24520,6 +25784,12 @@ color
 Highlight
 ;
 }
+/
+*
+Popup
+Icons
+*
+/
 #
 identity
 -
@@ -24828,6 +26098,13 @@ png
 ;
 }
 }
+/
+*
+Popup
+Body
+Text
+*
+/
 .
 identity
 -
@@ -25900,6 +27177,15 @@ png
 )
 ;
 }
+/
+*
+XXX
+:
+need
+HiDPI
+version
+*
+/
 .
 geo
 -
@@ -26001,6 +27287,18 @@ start
 :
 0
 ;
+/
+*
+override
+default
+label
+margin
+to
+match
+description
+margin
+*
+/
 }
 .
 indexedDB
@@ -26778,6 +28076,26 @@ box
 hidden
 ]
 {
+/
+*
+Override
+display
+:
+none
+to
+make
+the
+pluginBlockedNotification
+animation
+work
+when
+showing
+the
+notification
+repeatedly
+.
+*
+/
 display
 :
 -
@@ -28509,6 +29827,12 @@ png
 ;
 }
 }
+/
+*
+Popup
+Buttons
+*
+/
 #
 identity
 -
@@ -28566,6 +29890,23 @@ active
 {
 hudButtonPressed
 }
+/
+*
+:
+:
+:
+:
+:
+Keyboard
+UI
+Panel
+:
+:
+:
+:
+:
+*
+/
 .
 KUI
 -
@@ -28658,6 +29999,13 @@ shadow
 none
 ;
 }
+/
+*
+Ctrl
+-
+Tab
+*
+/
 #
 ctrlTab
 -
@@ -28952,6 +30300,12 @@ top
 5em
 ;
 }
+/
+*
+Sync
+Panels
+*
+/
 .
 sync
 -
@@ -29174,6 +30528,12 @@ margin
 0
 ;
 }
+/
+*
+Status
+panel
+*
+/
 .
 statuspanel
 -
@@ -29357,6 +30717,14 @@ left
 1em
 ;
 }
+/
+*
+Lion
+Fullscreen
+window
+styling
+*
+/
 media
 (
 -
@@ -29426,6 +30794,26 @@ moz
 -
 lwtheme
 {
+/
+*
+This
+additional
+padding
+matches
+the
+change
+in
+height
+in
+the
+pseudo
+-
+element
+*
+above
+.
+*
+/
 padding
 -
 top
@@ -29455,6 +30843,44 @@ moz
 -
 lwtheme
 {
+/
+*
+In
+combination
+with
+the
+previous
+rule
+forces
+the
+top
+22px
+of
+the
+*
+background
+image
+to
+be
+hidden
+so
+the
+image
+doesn
+'
+t
+jump
+around
+with
+*
+the
+loss
+of
+the
+titlebar
+.
+*
+/
 background
 -
 position
@@ -29677,6 +31103,32 @@ downloads
 indicator
 .
 css
+/
+*
+On
+mac
+the
+popup
+notification
+contents
+are
+indented
+by
+default
+and
+so
+the
+default
+closebutton
+margins
+from
+notification
+.
+css
+require
+adjustment
+*
+/
 .
 click
 -
@@ -29757,6 +31209,12 @@ hsl
 )
 ;
 }
+/
+*
+Developer
+Toolbar
+*
+/
 #
 developer
 -
@@ -29777,6 +31235,12 @@ right
 8px
 ;
 }
+/
+*
+Error
+counter
+*
+/
 #
 developer
 -
@@ -29831,6 +31295,19 @@ radius
 1px
 ;
 }
+/
+*
+=
+=
+=
+social
+toolbar
+button
+=
+=
+=
+*
+/
 #
 social
 -
@@ -30379,6 +31856,22 @@ badge
 ]
 )
 {
+/
+*
+The
+|
+content
+|
+property
+is
+set
+in
+the
+content
+stylesheet
+.
+*
+/
 font
 -
 size
@@ -30829,6 +32322,18 @@ start
 :
 0
 ;
+/
+*
+override
+default
+label
+margin
+to
+match
+description
+margin
+*
+/
 }
 .
 social
@@ -30925,6 +32430,35 @@ active
 {
 hudButtonPressed
 }
+/
+*
+=
+=
+=
+end
+of
+social
+toolbar
+button
+=
+=
+=
+*
+/
+/
+*
+=
+=
+=
+social
+toolbar
+provider
+menu
+=
+=
+=
+*
+/
 .
 social
 -
@@ -31011,6 +32545,16 @@ padding
 0
 ;
 }
+/
+*
+fixup
+rounded
+corners
+for
+osx
+panels
+*
+/
 .
 social
 -
@@ -31354,6 +32898,22 @@ radius
 inherit
 ;
 }
+/
+*
+=
+=
+=
+end
+of
+social
+toolbar
+provider
+menu
+=
+=
+=
+*
+/
 %
 include
 .
@@ -31648,6 +33208,12 @@ radius
 toolbarbuttonCornerRadius
 ;
 }
+/
+*
+Customization
+mode
+*
+/
 %
 include
 .
@@ -32369,20 +33935,6 @@ toolbox
 :
 :
 after
-#
-main
--
-window
-[
-customize
--
-entered
-]
-#
-TabsToolbar
-:
-:
-after
 {
 margin
 -
@@ -32397,6 +33949,13 @@ right
 2em
 ;
 }
+/
+*
+End
+customization
+mode
+*
+/
 #
 main
 -
@@ -32529,6 +34088,39 @@ right
 20px
 ;
 }
+/
+*
+Note
+that
+the
+caption
+and
+fullscreen
+buttons
+stay
+in
+the
+same
+position
+for
+LTR
+and
+RTL
+but
+we
+move
+the
+private
+browsing
+indicator
+to
+the
+left
+in
+RTL
+.
+*
+/
 #
 main
 -
@@ -32626,6 +34218,35 @@ dir
 ltr
 )
 {
+/
+*
+Override
+display
+:
+none
+for
+.
+titlebar
+-
+placeholder
+in
+fullscreen
+so
+we
+can
+have
+consistent
+position
+and
+padding
+for
+the
+private
+browsing
+indicator
+.
+*
+/
 display
 :
 -
@@ -32747,6 +34368,27 @@ lion
 theme
 )
 {
+/
+*
+There
+is
+no
+OS
+fullscreen
+button
+prior
+to
+Lion
+so
+the
+PB
+indicator
+can
+move
+closer
+.
+*
+/
 #
 main
 -
