--- a/browser/themes/linux/browser.css
+++ b/browser/themes/linux/browser.css
@@ -1,6 +1,64 @@
 %
 if
 0
+/
+*
+This
+Source
+Code
+Form
+is
+subject
+to
+the
+terms
+of
+the
+Mozilla
+Public
+*
+License
+v
+.
+2
+.
+0
+.
+If
+a
+copy
+of
+the
+MPL
+was
+not
+distributed
+with
+this
+*
+file
+You
+can
+obtain
+one
+at
+http
+:
+/
+/
+mozilla
+.
+org
+/
+MPL
+/
+2
+.
+0
+/
+.
+*
+/
 %
 endif
 import
@@ -127,6 +185,13 @@ orient
 :
 vertical
 ;
+/
+*
+for
+flex
+hack
+*
+/
 }
 #
 main
@@ -142,6 +207,18 @@ flex
 :
 1
 ;
+/
+*
+make
+menu
+items
+expand
+to
+fill
+toolbar
+height
+*
+/
 }
 #
 navigator
@@ -167,12 +244,54 @@ top
 :
 none
 ;
-border
+}
+#
+navigator
 -
-bottom
+toolbox
+:
+:
+after
+{
+content
+:
+"
+"
+;
+display
+:
+-
+moz
+-
+box
+;
+-
+moz
+-
+box
+-
+ordinal
+-
+group
+:
+101
+;
+/
+*
+tabs
+toolbar
+is
+100
+*
+/
+height
 :
 1px
-solid
+;
+background
+-
+color
+:
 ThreeDShadow
 ;
 }
@@ -311,6 +430,16 @@ top
 -
 1px
 ;
+/
+*
+Move
+up
+1px
+into
+the
+TabsToolbar
+*
+/
 padding
 -
 top
@@ -323,6 +452,19 @@ bottom
 :
 2px
 ;
+/
+*
+Position
+the
+toolbar
+above
+the
+bottom
+of
+background
+tabs
+*
+/
 position
 :
 relative
@@ -378,6 +520,14 @@ browser
 -
 bottombox
 {
+/
+*
+opaque
+for
+layers
+optimization
+*
+/
 background
 -
 color
@@ -433,6 +583,12 @@ opacity
 85
 ;
 }
+/
+*
+Places
+toolbar
+*
+/
 toolbarbutton
 .
 bookmark
@@ -566,6 +722,18 @@ height
 16px
 ;
 }
+/
+*
+Force
+the
+display
+of
+the
+label
+for
+bookmarks
+*
+/
 .
 bookmark
 -
@@ -628,6 +796,14 @@ display
 none
 ;
 }
+/
+*
+Dropmarker
+for
+folder
+bookmarks
+*
+/
 .
 bookmark
 -
@@ -761,6 +937,23 @@ png
 important
 ;
 }
+/
+*
+-
+-
+-
+-
+-
+BOOKMARK
+STAR
+ANIMATION
+-
+-
+-
+-
+-
+*
+/
 keyframes
 animation
 -
@@ -1230,6 +1423,12 @@ ease
 out
 ;
 }
+/
+*
+Bookmark
+menus
+*
+/
 menu
 .
 bookmark
@@ -1308,6 +1507,15 @@ start
 0px
 ;
 }
+/
+*
+Bookmark
+drag
+and
+drop
+styles
+*
+/
 .
 bookmark
 -
@@ -1335,6 +1543,15 @@ HighlightText
 important
 ;
 }
+/
+*
+rules
+for
+menupopup
+drop
+indicators
+*
+/
 .
 menupopup
 -
@@ -1348,6 +1565,21 @@ position
 :
 relative
 ;
+/
+*
+these
+two
+margins
+must
+together
+compensate
+the
+indicator
+'
+s
+height
+*
+/
 margin
 -
 top
@@ -1399,6 +1631,12 @@ color
 Highlight
 ;
 }
+/
+*
+Bookmarks
+toolbar
+*
+/
 #
 PlacesToolbarDropIndicator
 {
@@ -1426,6 +1664,12 @@ png
 )
 ;
 }
+/
+*
+Bookmark
+items
+*
+/
 .
 bookmark
 -
@@ -1896,6 +2140,17 @@ opacity
 7
 ;
 }
+/
+*
+Stock
+icons
+for
+the
+menu
+bar
+items
+*
+/
 menuitem
 :
 not
@@ -4139,6 +4394,13 @@ png
 )
 ;
 }
+/
+*
+Primary
+toolbar
+buttons
+*
+/
 :
 -
 moz
@@ -4396,6 +4658,15 @@ padding
 7px
 ;
 }
+/
+*
+Help
+SDK
+icons
+fit
+:
+*
+/
 toolbarbutton
 [
 sdk
@@ -4464,6 +4735,35 @@ toolbarbutton
 -
 icon
 {
+/
+*
+XXXgijs
+box
+models
+strike
+again
+:
+this
+is
+16px
++
+2
+*
+7px
+padding
++
+2
+*
+1px
+border
+(
+from
+the
+rules
+above
+)
+*
+/
 width
 :
 32px
@@ -5346,6 +5646,13 @@ scaleX
 )
 ;
 }
+/
+*
+tabview
+menu
+item
+*
+/
 #
 menu_tabview
 {
@@ -5987,6 +6294,13 @@ disabled
 )
 ;
 }
+/
+*
+Menu
+panel
+buttons
+*
+/
 %
 include
 .
@@ -6160,6 +6474,13 @@ opacity
 4
 ;
 }
+/
+*
+Fullscreen
+window
+controls
+*
+/
 #
 window
 -
@@ -6277,6 +6598,12 @@ gif
 )
 ;
 }
+/
+*
+Location
+bar
+*
+/
 #
 urlbar
 {
@@ -6860,6 +7187,12 @@ rect
 )
 ;
 }
+/
+*
+Identity
+indicator
+*
+/
 #
 identity
 -
@@ -7072,6 +7405,13 @@ end
 4px
 ;
 }
+/
+*
+Identity
+popup
+icons
+*
+/
 #
 identity
 -
@@ -7204,6 +7544,14 @@ rect
 )
 ;
 }
+/
+*
+Identity
+popup
+body
+text
+*
+/
 .
 identity
 -
@@ -7723,6 +8071,12 @@ top
 5px
 ;
 }
+/
+*
+Notification
+popup
+*
+/
 #
 notification
 -
@@ -8539,6 +8893,13 @@ png
 )
 ;
 }
+/
+*
+Notification
+icon
+box
+*
+/
 #
 notification
 -
@@ -9240,6 +9601,26 @@ box
 hidden
 ]
 {
+/
+*
+Override
+display
+:
+none
+to
+make
+the
+pluginBlockedNotification
+animation
+work
+when
+showing
+the
+notification
+repeatedly
+.
+*
+/
 display
 :
 -
@@ -9979,6 +10360,20 @@ solid
 GrayText
 ;
 }
+/
+*
+Combined
+go
+/
+reload
+/
+stop
+button
+in
+location
+bar
+*
+/
 #
 urlbar
 >
@@ -10534,6 +10929,13 @@ rect
 )
 ;
 }
+/
+*
+Popup
+blocker
+button
+*
+/
 #
 page
 -
@@ -10565,6 +10967,13 @@ png
 )
 ;
 }
+/
+*
+social
+share
+panel
+*
+/
 .
 social
 -
@@ -10615,6 +11024,19 @@ height
 :
 150px
 ;
+/
+*
+we
+resize
+our
+panels
+dynamically
+make
+it
+look
+nice
+*
+/
 transition
 :
 height
@@ -10894,6 +11316,13 @@ height
 16px
 ;
 }
+/
+*
+social
+recommending
+panel
+*
+/
 #
 social
 -
@@ -10917,6 +11346,14 @@ rect
 )
 ;
 }
+/
+*
+bookmarks
+menu
+-
+button
+*
+/
 #
 bookmarks
 -
@@ -11372,6 +11809,12 @@ bottom
 16px
 ;
 }
+/
+*
+Bookmarking
+panel
+*
+/
 #
 editBookmarkPanelStarIcon
 {
@@ -11465,6 +11908,19 @@ bottom
 5em
 ;
 }
+/
+*
+Implements
+editBookmarkPanel
+resizing
+on
+folderTree
+un
+-
+collapse
+.
+*
+/
 #
 editBMPanel_folderTree
 {
@@ -11655,6 +12111,12 @@ margin
 0
 ;
 }
+/
+*
+Content
+area
+*
+/
 #
 sidebar
 {
@@ -11693,6 +12155,11 @@ shadow
 none
 ;
 }
+/
+*
+Tabstrip
+*
+/
 %
 include
 .
@@ -11710,6 +12177,26 @@ tabbrowser
 -
 tabs
 {
+/
+*
+override
+the
+global
+style
+to
+allow
+the
+selected
+tab
+to
+be
+above
+the
+nav
+-
+bar
+*
+/
 z
 -
 index
@@ -11735,6 +12222,19 @@ position
 relative
 ;
 }
+/
+*
+*
+Draw
+the
+bottom
+border
+of
+the
+tabstrip
+:
+*
+/
 #
 TabsToolbar
 :
@@ -12092,6 +12592,14 @@ menu
 )
 ;
 }
+/
+*
+Tab
+drag
+and
+drop
+*
+/
 .
 tab
 -
@@ -12136,6 +12644,15 @@ index
 3
 ;
 }
+/
+*
+In
+-
+tab
+close
+button
+*
+/
 .
 tab
 -
@@ -12148,6 +12665,45 @@ toolbarbutton
 -
 icon
 {
+/
+*
+XXX
+Buttons
+have
+padding
+in
+widget
+/
+that
+we
+don
+'
+t
+want
+here
+but
+can
+'
+t
+override
+with
+good
+CSS
+so
+we
+must
+use
+evil
+CSS
+to
+give
+the
+impression
+of
+smaller
+content
+*
+/
 margin
 :
 -
@@ -12212,6 +12768,14 @@ end
 4px
 ;
 }
+/
+*
+Tabstrip
+new
+tab
+button
+*
+/
 .
 tabs
 -
@@ -12283,6 +12847,13 @@ region
 auto
 ;
 }
+/
+*
+Tabstrip
+close
+button
+*
+/
 .
 tabs
 -
@@ -12326,12 +12897,58 @@ toolbarbutton
 -
 icon
 {
+/
+*
+XXX
+Buttons
+have
+padding
+in
+widget
+/
+that
+we
+don
+'
+t
+want
+here
+but
+can
+'
+t
+override
+with
+good
+CSS
+so
+we
+must
+use
+evil
+CSS
+to
+give
+the
+impression
+of
+smaller
+content
+*
+/
 margin
 :
 -
 2px
 ;
 }
+/
+*
+Tabbrowser
+arrowscrollbox
+arrows
+*
+/
 .
 tabbrowser
 -
@@ -12765,6 +13382,13 @@ display
 none
 ;
 }
+/
+*
+All
+tabs
+menupopup
+*
+/
 .
 alltabs
 -
@@ -12885,6 +13509,23 @@ item
 tabIsVisible
 ]
 {
+/
+*
+box
+-
+shadow
+instead
+of
+background
+-
+color
+to
+work
+around
+native
+styling
+*
+/
 box
 -
 shadow
@@ -12896,6 +13537,11 @@ inset
 ThreeDShadow
 ;
 }
+/
+*
+Sidebar
+*
+/
 #
 sidebar
 -
@@ -13069,6 +13715,13 @@ margin
 0
 ;
 }
+/
+*
+Ctrl
+-
+Tab
+*
+/
 .
 ctrlTab
 -
@@ -13214,6 +13867,12 @@ top
 10px
 ;
 }
+/
+*
+Sync
+Panel
+*
+/
 .
 sync
 -
@@ -13332,6 +13991,12 @@ margin
 0
 ;
 }
+/
+*
+Status
+panel
+*
+/
 .
 statuspanel
 -
@@ -13777,6 +14442,12 @@ hsl
 )
 ;
 }
+/
+*
+Error
+counter
+*
+/
 #
 developer
 -
@@ -13840,6 +14511,13 @@ end
 2px
 ;
 }
+/
+*
+Social
+toolbar
+item
+*
+/
 #
 social
 -
@@ -13965,6 +14643,22 @@ badge
 :
 after
 {
+/
+*
+The
+|
+content
+|
+property
+is
+set
+in
+the
+content
+stylesheet
+.
+*
+/
 font
 -
 size
@@ -14180,6 +14874,18 @@ start
 :
 0
 ;
+/
+*
+override
+default
+label
+margin
+to
+match
+description
+margin
+*
+/
 }
 .
 social
@@ -14237,6 +14943,14 @@ margin
 0
 ;
 }
+/
+*
+social
+toolbar
+provider
+menu
+*
+/
 #
 social
 -
@@ -14583,6 +15297,12 @@ radius
 5px
 ;
 }
+/
+*
+Customization
+mode
+*
+/
 %
 include
 .
@@ -14972,7 +15692,9 @@ window
 customizing
 ]
 #
-TabsToolbar
+navigator
+-
+toolbox
 :
 :
 after
@@ -14990,6 +15712,13 @@ right
 2em
 ;
 }
+/
+*
+End
+customization
+mode
+*
+/
 #
 main
 -
