--- a/browser/themes/shared/customizableui/panelUIOverlay.inc.css
+++ b/browser/themes/shared/customizableui/panelUIOverlay.inc.css
@@ -662,6 +662,52 @@ panel
 -
 subview
 -
+body
+{
+overflow
+-
+y
+:
+auto
+;
+overflow
+-
+x
+:
+hidden
+;
+-
+moz
+-
+box
+-
+flex
+:
+1
+;
+}
+#
+PanelUI
+-
+popup
+.
+panel
+-
+subview
+-
+body
+{
+margin
+:
+-
+4px
+;
+}
+.
+panel
+-
+subview
+-
 header
 .
 subviewbutton
