Bug 969961 - Turn CSS Variables pref on in tests that rely on it. r=philor
UltraBlame original commit: 890d5e759a4b7c6af8c7022361760bcf322cec01

--- a/layout/style/test/test_value_storage.html
+++ b/layout/style/test/test_value_storage.html
@@ -783,6 +783,31 @@ test_property
 property
 )
 {
+ok
+(
+SpecialPowers
+.
+getBoolPref
+(
+"
+layout
+.
+css
+.
+variables
+.
+enabled
+"
+)
+"
+pref
+not
+set
+#
+2
+"
+)
+;
 var
 info
 =
@@ -2268,6 +2293,11 @@ prereq
 }
 }
 }
+function
+runTest
+(
+)
+{
 /
 /
 To
@@ -2289,17 +2319,29 @@ at
 a
 time
 .
-SimpleTest
-.
-waitForExplicitFinish
+ok
 (
+SpecialPowers
+.
+getBoolPref
+(
+"
+layout
+.
+css
+.
+variables
+.
+enabled
+"
 )
-;
-SimpleTest
-.
-requestLongerTimeout
-(
-2
+"
+pref
+not
+set
+#
+1
+"
 )
 ;
 var
@@ -2376,6 +2418,45 @@ SimpleTest
 executeSoon
 (
 do_one
+)
+;
+}
+SimpleTest
+.
+waitForExplicitFinish
+(
+)
+;
+SimpleTest
+.
+requestLongerTimeout
+(
+2
+)
+;
+SpecialPowers
+.
+pushPrefEnv
+(
+{
+set
+:
+[
+[
+"
+layout
+.
+css
+.
+variables
+.
+enabled
+"
+true
+]
+]
+}
+runTest
 )
 ;
 <
