Bug 967168 - DevTools Addon icons should not be inverted on light theme;r=jwalker
UltraBlame original commit: dc07278bb6f84dad9d4d458d4d16cbe4c6f04c0b

--- a/browser/themes/shared/devtools/toolbars.inc.css
+++ b/browser/themes/shared/devtools/toolbars.inc.css
@@ -5241,6 +5241,11 @@ light
 devtools
 -
 tab
+[
+icon
+-
+invertable
+]
 >
 image
 .
@@ -5265,6 +5270,8 @@ light
 command
 -
 button
+-
+invertable
 >
 image
 .
@@ -5275,6 +5282,8 @@ light
 command
 -
 button
+-
+invertable
 :
 active
 >
@@ -5420,6 +5429,8 @@ light
 command
 -
 button
+-
+invertable
 [
 checked
 =
@@ -5442,6 +5453,11 @@ devtools
 -
 tab
 [
+icon
+-
+invertable
+]
+[
 selected
 ]
 >
@@ -5454,6 +5470,11 @@ light
 devtools
 -
 tab
+[
+icon
+-
+invertable
+]
 [
 highlighted
 ]
