Bug 962283 - fix rtl layout of Metro Firefox Start page. r=mbrubeck
UltraBlame original commit: 44bbbe6e94cf3eac7ea6b3d41b570e5dc126aa8e

--- a/browser/metro/theme/firstrun.css
+++ b/browser/metro/theme/firstrun.css
@@ -504,7 +504,27 @@ arrow
 .
 arrow
 -
-left
+down
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+{
+transform
+:
+scaleY
+(
+-
+1
+)
+;
+}
 .
 instruction
 -
@@ -512,7 +532,7 @@ arrow
 .
 arrow
 -
-right
+back
 .
 instruction
 -
@@ -520,7 +540,15 @@ arrow
 .
 arrow
 -
-left
+forward
+.
+instruction
+-
+arrow
+.
+arrow
+-
+back
 -
 straight
 .
@@ -530,7 +558,7 @@ arrow
 .
 arrow
 -
-right
+forward
 -
 straight
 {
@@ -567,7 +595,64 @@ arrow
 .
 arrow
 -
-right
+back
+.
+instruction
+-
+arrow
+.
+arrow
+-
+forward
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+{
+transform
+:
+rotate
+(
+0
+)
+scaleY
+(
+1
+)
+;
+}
+.
+instruction
+-
+arrow
+.
+arrow
+-
+forward
+.
+instruction
+-
+arrow
+.
+arrow
+-
+back
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
 {
 transform
 :
@@ -589,9 +674,29 @@ arrow
 .
 arrow
 -
-left
+back
 -
 straight
+.
+instruction
+-
+arrow
+.
+arrow
+-
+forward
+-
+straight
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
 {
 transform
 :
@@ -613,9 +718,29 @@ arrow
 .
 arrow
 -
-right
+forward
 -
 straight
+.
+instruction
+-
+arrow
+.
+arrow
+-
+back
+-
+straight
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
 {
 transform
 :
@@ -654,6 +779,43 @@ calc
 ;
 }
 #
+instruction
+-
+tabs
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+{
+right
+:
+0
+;
+left
+:
+auto
+;
+transform
+:
+translateX
+(
+calc
+(
+50
+%
+-
+630px
+)
+)
+;
+}
+#
 start
 -
 container
@@ -677,6 +839,47 @@ calc
 (
 50vw
 -
+50
+%
+)
+)
+;
+}
+#
+start
+-
+container
+[
+viewstate
+=
+"
+portrait
+"
+]
+#
+instruction
+-
+tabs
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+{
+transform
+:
+translateX
+(
+calc
+(
+-
+50vw
++
 50
 %
 )
@@ -816,7 +1019,7 @@ topsites
 .
 arrow
 -
-left
+back
 -
 straight
 {
@@ -843,7 +1046,7 @@ topsites
 .
 arrow
 -
-left
+back
 {
 display
 :
@@ -868,7 +1071,7 @@ topsites
 .
 arrow
 -
-left
+back
 -
 straight
 {
@@ -895,7 +1098,7 @@ topsites
 .
 arrow
 -
-left
+back
 {
 display
 :
@@ -950,6 +1153,71 @@ calc
 -
 300px
 -
+50
+%
+)
+)
+;
+}
+#
+start
+-
+container
+[
+viewstate
+=
+"
+landscape
+"
+]
+#
+instruction
+-
+history
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+#
+start
+-
+container
+[
+viewstate
+=
+"
+landscape
+"
+]
+#
+instruction
+-
+bookmarks
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+{
+transform
+:
+translateX
+(
+calc
+(
+300px
++
 50
 %
 )
@@ -1019,6 +1287,90 @@ container
 viewstate
 =
 "
+portrait
+"
+]
+#
+instruction
+-
+history
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+#
+start
+-
+container
+[
+viewstate
+=
+"
+portrait
+"
+]
+#
+instruction
+-
+bookmarks
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+#
+start
+-
+container
+[
+viewstate
+=
+"
+portrait
+"
+]
+#
+instruction
+-
+topsites
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+{
+transform
+:
+translateX
+(
+55px
+)
+;
+}
+#
+start
+-
+container
+[
+viewstate
+=
+"
 landscape
 "
 ]
@@ -1038,6 +1390,41 @@ bottom
 right
 :
 37px
+;
+}
+#
+start
+-
+container
+[
+viewstate
+=
+"
+landscape
+"
+]
+#
+instruction
+-
+menu
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+{
+left
+:
+37px
+;
+right
+:
+auto
 ;
 }
 #
@@ -1070,6 +1457,41 @@ translateY
 (
 40px
 )
+;
+}
+#
+start
+-
+container
+[
+viewstate
+=
+"
+portrait
+"
+]
+#
+instruction
+-
+menu
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+{
+left
+:
+37px
+;
+right
+:
+auto
 ;
 }
 #
@@ -1177,7 +1599,7 @@ arrow
 .
 arrow
 -
-left
+back
 .
 instruction
 -
@@ -1185,7 +1607,7 @@ arrow
 .
 arrow
 -
-right
+forward
 {
 background
 -
@@ -1309,7 +1731,7 @@ arrow
 .
 arrow
 -
-left
+back
 .
 instruction
 -
@@ -1317,7 +1739,7 @@ arrow
 .
 arrow
 -
-right
+forward
 {
 background
 -
