--- a/browser/metro/theme/tiles.css
+++ b/browser/metro/theme/tiles.css
@@ -351,6 +351,33 @@ fff
 ;
 }
 richgriditem
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+.
+tile
+-
+start
+-
+container
+{
+right
+:
+10px
+;
+left
+:
+0
+;
+}
+richgriditem
 [
 search
 ]
@@ -619,9 +646,12 @@ left
 50
 %
 ;
+-
+moz
+-
 margin
 -
-left
+start
 :
 -
 13px
@@ -632,6 +662,37 @@ top
 :
 -
 8px
+;
+}
+richgriditem
+[
+search
+]
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+.
+tile
+-
+icon
+-
+box
+{
+right
+:
+50
+%
+;
+left
+:
+auto
 ;
 }
 richgriditem
@@ -676,6 +737,43 @@ iconsize
 large
 "
 ]
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+.
+tile
+-
+icon
+-
+box
+{
+right
+:
+0
+;
+left
+:
+auto
+;
+}
+richgriditem
+[
+search
+]
+[
+iconsize
+=
+"
+large
+"
+]
 .
 tile
 -
@@ -688,6 +786,43 @@ left
 0
 ;
 padding
+:
+0
+;
+}
+richgriditem
+[
+search
+]
+[
+iconsize
+=
+"
+large
+"
+]
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+.
+tile
+-
+start
+-
+container
+{
+left
+:
+auto
+;
+right
 :
 0
 ;
@@ -775,10 +910,33 @@ right
 0
 ;
 padding
+-
+top
 :
 1em
+;
+-
+moz
+-
+padding
+-
+end
+:
 6px
+;
+padding
+-
+bottom
+:
 6px
+;
+-
+moz
+-
+padding
+-
+start
+:
 12px
 ;
 background
@@ -836,6 +994,31 @@ background
 -
 color
 metro_animation_easing
+;
+}
+richgriditem
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+.
+tile
+-
+desc
+{
+right
+:
+52px
+;
+left
+:
+0
 ;
 }
 richgriditem
@@ -985,11 +1168,38 @@ left
 :
 0
 ;
+right
+:
+0
+;
 padding
+-
+top
 :
 4px
+;
+-
+moz
+-
+padding
+-
+end
+:
 8px
+;
+padding
+-
+bottom
+:
 4px
+;
+-
+moz
+-
+padding
+-
+start
+:
 56px
 ;
 }
@@ -1297,6 +1507,40 @@ rgba
 }
 richgriditem
 [
+tiletype
+=
+"
+thumbnail
+"
+]
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+.
+tile
+-
+icon
+-
+box
+{
+left
+:
+auto
+;
+right
+:
+10px
+;
+}
+richgriditem
+[
 selected
 ]
 >
@@ -1386,20 +1630,20 @@ box
 ;
 background
 -
+repeat
+:
+no
+-
+repeat
+;
+background
+-
 position
 :
 right
 0
 top
 0
-;
-background
--
-repeat
-:
-no
--
-repeat
 ;
 background
 -
@@ -1413,6 +1657,68 @@ border
 metro_border_xthick
 solid
 selected_color
+;
+}
+richgriditem
+[
+selected
+]
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+>
+.
+tile
+-
+content
+:
+:
+after
+{
+background
+-
+position
+:
+left
+0
+top
+0
+;
+background
+-
+image
+:
+url
+(
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+images
+/
+tile
+-
+selected
+-
+check
+-
+rtl
+-
+hdpi
+.
+png
+)
 ;
 }
 richgriditem
@@ -1552,6 +1858,49 @@ size
 }
 richgriditem
 [
+pinned
+]
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+>
+.
+tile
+-
+content
+:
+:
+before
+{
+left
+:
+0
+;
+right
+:
+auto
+;
+-
+moz
+-
+transform
+:
+scaleX
+(
+-
+1
+)
+;
+}
+richgriditem
+[
 selected
 ]
 [
@@ -1588,6 +1937,9 @@ height
 }
 richgriditem
 [
+selected
+]
+[
 pinned
 ]
 :
@@ -1609,13 +1961,16 @@ content
 :
 before
 {
+background
+-
+position
+:
 left
-:
-0
-;
-right
-:
-auto
+-
+metro_border_xthick
+top
+-
+metro_border_xthick
 ;
 }
 richgriditem
@@ -1902,12 +2257,35 @@ tile
 desc
 {
 padding
+-
+top
 :
 0
 .
 5em
+;
+-
+moz
+-
+padding
+-
+end
+:
 4px
+;
+padding
+-
+bottom
+:
 4px
+;
+-
+moz
+-
+padding
+-
+start
+:
 4px
 ;
 }
