Bug 970380 - fix width and height of Australis SDK buttons in panel, r=jaws
UltraBlame original commit: 643c706bc2ef8457159c33c9b787c273e7768191

--- a/browser/themes/shared/customizableui/panelUIOverlay.inc.css
+++ b/browser/themes/shared/customizableui/panelUIOverlay.inc.css
@@ -1629,21 +1629,31 @@ palette
 "
 ]
 >
-#
-personal
+toolbarbutton
+[
+sdk
 -
-bookmarks
+button
+=
+"
+true
+"
+]
 >
-#
-bookmarks
+.
+toolbarbutton
 -
-toolbar
+icon
+toolbarbutton
+[
+sdk
 -
-placeholder
-#
-personal
--
-bookmarks
+button
+=
+"
+true
+"
+]
 [
 cui
 -
@@ -1656,12 +1666,10 @@ panel
 "
 ]
 >
-#
-bookmarks
+.
+toolbarbutton
 -
-toolbar
--
-placeholder
+icon
 {
 height
 :
